--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.2",
     "ip": "^1.1.5",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "koa-views": "^6.2.0",
     "koa2-cors": "^2.0.6",
     "log4js": "^4.3.2",
     "mongoose": "^5.6.1",
